<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green3"
    tools:context=".HomePageActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/forest_green"
        app:itemTextColor="@color/black"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/menu" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/roboto_bold"
            android:text="Volunteer by shipping out items to benefit non-profits. The majority of labels listed are prepaid by the non-profits and free."
            android:textColor="@color/black"
            android:textSize="13.5sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/children"
                    android:layout_width="320dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/clothing_bg"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="110dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:paddingRight="9dp"
                        app:srcCompat="@drawable/books2" />

                    <LinearLayout
                        android:layout_width="190dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:text="@string/books"
                            android:textColor="@color/black"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/new_or_gently_used_books"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <!-- New -->
                    <LinearLayout
                        android:id="@+id/women"
                        android:layout_width="320dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/clothing_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_vertical"
                            android:paddingEnd="9dp"
                            app:srcCompat="@drawable/clothing3" />

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="@string/clothing"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/apparel_baby_and_denim_new_or_gently_used_shoes"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- New -->
                    <LinearLayout
                        android:id="@+id/homeless"
                        android:layout_width="320dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/clothing_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="100dp"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="9dp"
                            app:srcCompat="@drawable/cookware1" />

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="@string/cookware"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/metal_based_cookware_bakeware_and_cutlery"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- New -->
                    <LinearLayout
                        android:id="@+id/animals"
                        android:layout_width="320dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/clothing_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="9dp"
                            app:srcCompat="@drawable/school_supplies3" />

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="School"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Crayons, backpacks, and school supplies"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- New -->
                    <LinearLayout
                        android:id="@+id/disabilities"
                        android:layout_width="320dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/clothing_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="9dp"
                            app:srcCompat="@drawable/sports_icon2" />

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="Sports"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Baseball equipment and tennis balls"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <!-- New -->
                    <LinearLayout
                        android:id="@+id/environment"
                        android:layout_width="320dp"
                        android:layout_height="95dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/clothing_bg"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="horizontal"
                        android:padding="5dp">

                        <ImageView
                            android:layout_width="110dp"
                            android:layout_height="80dp"
                            android:layout_gravity="center_vertical"
                            android:paddingRight="9dp"
                            app:srcCompat="@drawable/toys" />

                        <LinearLayout
                            android:layout_width="190dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="10dp"
                                android:text="Toys"
                                android:textColor="@color/black"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="New or good condition toys and Legos"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>